adding predicted values as a column

--- a/loan_sanction_predictor.ipynb
+++ b/loan_sanction_predictor.ipynb
@@ -17346,6 +17346,267 @@
     "model = SVC(random_state=42)\n",
     "model.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y'\n",
+      " 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y'\n",
+      " 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'N' 'N' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y'\n",
+      " 'Y' 'N' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y' 'Y'\n",
+      " 'Y' 'Y' 'Y' 'N' 'Y' 'N' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'Y'\n",
+      " 'Y' 'N' 'Y' 'Y' 'N' 'Y' 'Y' 'N' 'Y' 'Y' 'Y' 'Y' 'N' 'Y' 'Y' 'N' 'Y' 'Y'\n",
+      " 'Y' 'Y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#prediction  on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Gender_Female</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>Married_No</th>\n",
+       "      <th>Married_Yes</th>\n",
+       "      <th>Dependents_0</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Dependents_2</th>\n",
+       "      <th>Dependents_3+</th>\n",
+       "      <th>Education_Graduate</th>\n",
+       "      <th>Education_Not Graduate</th>\n",
+       "      <th>Self_Employed_No</th>\n",
+       "      <th>Self_Employed_Yes</th>\n",
+       "      <th>Property_Area_Rural</th>\n",
+       "      <th>Property_Area_Semiurban</th>\n",
+       "      <th>Property_Area_Urban</th>\n",
+       "      <th>Loan_Status_Predicted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>-0.544528</td>\n",
+       "      <td>-0.037922</td>\n",
+       "      <td>-0.983772</td>\n",
+       "      <td>0.305159</td>\n",
+       "      <td>0.402248</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>-0.067325</td>\n",
+       "      <td>-0.931554</td>\n",
+       "      <td>-1.571353</td>\n",
+       "      <td>-1.430680</td>\n",
+       "      <td>0.402248</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>-0.734870</td>\n",
+       "      <td>0.334654</td>\n",
+       "      <td>-0.298262</td>\n",
+       "      <td>0.305159</td>\n",
+       "      <td>0.402248</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>-0.824919</td>\n",
+       "      <td>0.522317</td>\n",
+       "      <td>-0.200332</td>\n",
+       "      <td>0.305159</td>\n",
+       "      <td>0.402248</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537</th>\n",
+       "      <td>-0.267373</td>\n",
+       "      <td>-0.931554</td>\n",
+       "      <td>-0.454950</td>\n",
+       "      <td>0.305159</td>\n",
+       "      <td>0.402248</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ApplicantIncome  CoapplicantIncome  LoanAmount  Loan_Amount_Term  \\\n",
+       "277        -0.544528          -0.037922   -0.983772          0.305159   \n",
+       "84         -0.067325          -0.931554   -1.571353         -1.430680   \n",
+       "275        -0.734870           0.334654   -0.298262          0.305159   \n",
+       "392        -0.824919           0.522317   -0.200332          0.305159   \n",
+       "537        -0.267373          -0.931554   -0.454950          0.305159   \n",
+       "\n",
+       "     Credit_History  Gender_Female  Gender_Male  Married_No  Married_Yes  \\\n",
+       "277        0.402248          False         True       False         True   \n",
+       "84         0.402248          False         True       False         True   \n",
+       "275        0.402248          False         True       False         True   \n",
+       "392        0.402248          False         True       False         True   \n",
+       "537        0.402248          False         True        True        False   \n",
+       "\n",
+       "     Dependents_0  ...  Dependents_2  Dependents_3+  Education_Graduate  \\\n",
+       "277          True  ...         False          False                True   \n",
+       "84          False  ...         False          False                True   \n",
+       "275         False  ...         False          False                True   \n",
+       "392          True  ...         False          False                True   \n",
+       "537         False  ...          True          False                True   \n",
+       "\n",
+       "     Education_Not Graduate  Self_Employed_No  Self_Employed_Yes  \\\n",
+       "277                   False              True              False   \n",
+       "84                    False              True              False   \n",
+       "275                   False              True              False   \n",
+       "392                   False              True              False   \n",
+       "537                   False              True              False   \n",
+       "\n",
+       "     Property_Area_Rural  Property_Area_Semiurban  Property_Area_Urban  \\\n",
+       "277                False                    False                 True   \n",
+       "84                 False                    False                 True   \n",
+       "275                False                     True                False   \n",
+       "392                False                    False                 True   \n",
+       "537                False                     True                False   \n",
+       "\n",
+       "     Loan_Status_Predicted  \n",
+       "277                      Y  \n",
+       "84                       Y  \n",
+       "275                      Y  \n",
+       "392                      Y  \n",
+       "537                      Y  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert X_test to a DataFrame\n",
+    "X_test_df = pd.DataFrame(X_test, columns=X_test.columns)\n",
+    "\n",
+    "# Add the predicted values to X_test_df\n",
+    "X_test_df['Loan_Status_Predicted'] = y_pred\n",
+    "\n",
+    "X_test_df.head()"
+   ]
   }
  ],
  "metadata": {
